Options to hide project board and hide workspace image

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -10,3 +10,8 @@
 <div *ngIf="localeLoading" class="loader-icon">
   <i class="fa fa-spinner fa-spin fa-4x"></i>
 </div>
+
+
+<!-- Workaround to preload assets -->
+<i class="fa fa-spinner fa-spin d-none"></i>
+<img src="assets/images/clean-icon.png" class="d-none">
